05-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
  name: nexus
  namespace: nexus
spec:
  rules:
  - host: nexus.k8s.rsletten.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nexus-0-service
            port:
              number: 8081
  tls:
  - hosts:
    - nexus.k8s.rsletten.com
    secretName: nexus-cert
